==> tac5551/LovyanGFX/src/lgfx/v1/platforms/arduino_default/common.cpp <==
#include "common.hpp"

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    switch (mode)
    {
    case pin_mode_t::output:
      ::pinMode(pin, OUTPUT);
      break;

#if defined (INPUT_PULLUP)
    case pin_mode_t::input_pullup:
      ::pinMode(pin, INPUT_PULLUP);
      break;
#endif
#if defined (INPUT_PULLDOWN)
    case pin_mode_t::input_pulldown:
      ::pinMode(pin, INPUT_PULLDOWN);
      break;
#endif
#if defined (INPUT_PULLDOWN_16)
    case pin_mode_t::input_pulldown:
      ::pinMode(pin, INPUT_PULLDOWN_16);
      break;
#endif

    default:
      ::pinMode(pin, INPUT);
      break;
    }
  }

    cpp::result<void, error_t> init(int spi_host, int spi_sclk, int spi_miso, int spi_mosi)  {
      cpp::result<void, error_t> res = {};
      spi = new HardwareSPI(spi_host);
      spi->begin();
      return res; }

    void release(int spi_host) {}

    void beginTransaction(int spi_host, uint32_t freq, int spi_mode) {
      SPISettings setting(freq, MSBFIRST, SPI_MODE0);
      spi->beginTransaction(setting);
    }

    void endTransaction(int spi_host) {spi->endTransaction();}

    void writeBytes(int spi_host, const uint8_t* data, size_t length) {}

    void readBytes(int spi_host, uint8_t* data, size_t length) {spi->transfer(data, length);}

    cpp::result<void, error_t> init(int i2c_port, int pin_sda, int pin_scl) { Wire.begin(); return {};}

    cpp::result<void, error_t> release(int i2c_port) { Wire.end(); return {};}

    cpp::result<void, error_t> restart(int i2c_port, int i2c_addr, uint32_t freq, bool read) {  Wire.endTransmission(true); Wire.beginTransmission(i2c_addr); return {};}

    cpp::result<void, error_t> beginTransaction(int i2c_port, int i2c_addr, uint32_t freq, bool read) { Wire.beginTransmission(i2c_addr); return {};}

    cpp::result<void, error_t> endTransaction(int i2c_port) { Wire.endTransmission(true); return {};}

    cpp::result<void, error_t> writeBytes(int i2c_port, const uint8_t *data, size_t length) { Wire.write(data, length); return {};}

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length)
      {
        Wire.readBytes((char *)data, (size_t)length);
        /*
        printf("0x");
        for (int i=0; i< length; i++) {
          printf("%02x ", data[i]);
        }
        printf("\n");
        */
        return {};
      }

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length, bool last_nack)
    {
      Wire.readBytes((char *)data, (size_t)length);
      /*
      printf("0x");
      for (int i=0; i< length; i++) {
        printf("%02x ", data[i]);
      }
      printf("\n");
      */
      return {};
    }

    cpp::result<void, error_t> init(int i2c_port, int pin_sda, int pin_scl) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> release(int i2c_port) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> restart(int i2c_port, int i2c_addr, uint32_t freq, bool read) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> beginTransaction(int i2c_port, int i2c_addr, uint32_t freq, bool read) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> endTransaction(int i2c_port) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> writeBytes(int i2c_port, const uint8_t *data, size_t length) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length) { return cpp::fail(error_t::unknown_err); }

    cpp::result<void, error_t> readBytes(int i2c_port, uint8_t *data, size_t length, bool last_nack) { return cpp::fail(error_t::unknown_err); }
