==> tac5551/LovyanGFX/src/lgfx/v1/platforms/samd21/common.cpp <==
#include "common.hpp"
#define WIRE_RISE_TIME_NANOSECONDS 125

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    size_t port = pin >> samd21::PORT_SHIFT;
    if (port >= 2) return;

    pin &= samd21::PIN_MASK;
    uint32_t pinMask = (1ul << pin);

    switch (mode)
    {
    case pin_mode_t::input:
      PORT->Group[port].PINCFG[pin].reg = (uint8_t)(PORT_PINCFG_INEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      break;

    case pin_mode_t::input_pulldown:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      PORT->Group[port].OUTCLR.reg = pinMask ;
      break;

    case pin_mode_t::input_pullup:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      PORT->Group[port].OUTSET.reg = pinMask ;
      break;

    case pin_mode_t::output:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN) ;
      PORT->Group[port].DIRSET.reg = pinMask ;
      break;
    }
  }

    cpp::result<void, error_t> init(int sercom_index, int pin_sclk, int pin_miso, int pin_mosi)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      int dipo = -1;
      int dopo = -1;

      for (int alt = 0; alt < 2; ++alt)
      {
        int pad_sclk = getPadNumber(sercom_index, pin_sclk, alt);
        int pad_mosi = getPadNumber(sercom_index, pin_mosi, alt);
        dipo         = getPadNumber(sercom_index, pin_miso, alt);
        if (pad_sclk == 1)
        {
          if (     pad_mosi == 0) dopo = 0;
          else if (pad_mosi == 3) dopo = 2;
        }
        else if (pad_sclk == 3)
        {
          if (     pad_mosi == 0) dopo = 3;
          else if (pad_mosi == 2) dopo = 1;
        }
        if (dopo >= 0)
        {
          pinAssignPeriph(pin_sclk, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          pinAssignPeriph(pin_mosi, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          if (dipo >= 0)
          {
            pinAssignPeriph(pin_miso, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          }
          break;
        }
      }
      if (dopo < 0) { return cpp::fail(error_t::invalid_arg); }
      if (dipo < 0) dipo = 0;

      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

 //SPI.begin();
// void SPIClass::begin()
// {
  // void SPIClass::init()
  // {
  //   if (initialized)
  //     return;
  //   interruptMode = SPI_IMODE_NONE;
  //   interruptSave = 0;
  //   interruptMask = 0;
  //   initialized = true;
  // }
//   pinPeripheral(_uc_pinMiso, g_APinDescription[_uc_pinMiso].ulPinType);
//   pinPeripheral(_uc_pinSCK, g_APinDescription[_uc_pinSCK].ulPinType);
//   pinPeripheral(_uc_pinMosi, g_APinDescription[_uc_pinMosi].ulPinType);
  // void SPIClass::config(SPISettings settings)
  // {
  //   _p_sercom->disableSPI();
      /// spi disable
      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;
    // void SERCOM::initSPI(SercomSpiTXPad mosi, SercomRXPad miso, SercomSpiCharSize charSize, SercomDataOrder dataOrder)
    // {
    //   resetSPI();
      /// spi reset
      sercom->SPI.CTRLA.bit.SWRST = 1;
      while(sercom->SPI.CTRLA.bit.SWRST || sercom->SPI.SYNCBUSY.bit.SWRST);

    //   initClockNVIC();
      uint8_t   clockId = sercomData->clock;
      IRQn_Type IdNvic  = sercomData->irqn;

      // Setting NVIC
      NVIC_ClearPendingIRQ(IdNvic);
      NVIC_SetPriority(IdNvic, SERCOM_NVIC_PRIORITY);
      NVIC_EnableIRQ(IdNvic);

      // Setting clock
      GCLK->CLKCTRL.reg = GCLK_CLKCTRL_ID( clockId ) // Generic Clock 0 (SERCOMx)
                        | GCLK_CLKCTRL_GEN_GCLK0     // Generic Clock Generator 0 is source
                        | GCLK_CLKCTRL_CLKEN;

      while (GCLK->STATUS.reg & GCLK_STATUS_SYNCBUSY); // Wait for synchronization


      //Setting the CTRLA register
      sercom->SPI.CTRLA.reg = SERCOM_SPI_CTRLA_MODE_SPI_MASTER
                            | SERCOM_SPI_CTRLA_DOPO(dopo)
                            | SERCOM_SPI_CTRLA_DIPO(dipo)
                            | SercomDataOrder::MSB_FIRST << SERCOM_SPI_CTRLA_DORD_Pos;

      //Setting the CTRLB register
      sercom->SPI.CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(SPI_CHAR_SIZE_8_BITS)
                            | SERCOM_SPI_CTRLB_RXEN; //Active the SPI receiver.

      while( sercom->SPI.SYNCBUSY.bit.CTRLB == 1 );
    // }
  //   _p_sercom->initSPIClock(settings.dataMode, settings.clockFreq);
  //   _p_sercom->enableSPI();
  // }
// }
      return {};
    }

    void release(int sercom_index)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;

      sercom->SPI.CTRLA.bit.SWRST = 1;
      while (sercom->SPI.CTRLA.bit.SWRST || sercom->SPI.SYNCBUSY.bit.SWRST);
    }

    void beginTransaction(int sercom_index, uint32_t freq, int spi_mode)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;

      //Extract data from clockMode
      sercom->SPI.CTRLA.bit.CPHA = spi_mode & 1;
      sercom->SPI.CTRLA.bit.CPOL = (spi_mode >> 1) & 1;
      sercom->SPI.BAUD.reg = FreqToClockDiv(freq);

      sercom->SPI.CTRLA.bit.ENABLE = 1;
      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
    }

    void endTransaction(int sercom_index)
    {
    }

    void writeBytes(int sercom_index, const uint8_t* data, size_t length)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *spi = &sercom->SPI;
      do
      {
        spi->DATA.reg = *data++;
        while (spi->INTFLAG.bit.DRE == 0);
      } while (--length);
      while (!spi->INTFLAG.bit.TXC);
    }

    void readBytes(int sercom_index, uint8_t* data, size_t length)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *spi = &sercom->SPI;
      while (spi->INTFLAG.bit.RXC) { uint32_t tmp = spi->DATA.reg; (void)tmp; }
      do
      {
        spi->DATA.reg = *data;
        while (!spi->INTFLAG.bit.RXC);
        *data++ = (spi->DATA.reg & 0xFF);
      } while (--length);
    }

    cpp::result<void, error_t> init(int sercom_index, int pin_sda, int pin_scl)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      if (samd21::sercom_ref_count[sercom_index] == 0)
      {
        int pad_sda;
        int pad_scl;
        int alt = 0;
        do
        {
          pad_sda = getPadNumber(sercom_index, pin_sda, alt);
          pad_scl = getPadNumber(sercom_index, pin_scl, alt);
          if (pad_sda == 0 && pad_scl == 1) break;
        } while (++alt < 2);
        if (alt == 2) { return cpp::fail(error_t::invalid_arg); }

        pinAssignPeriph(pin_sda, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
        pinAssignPeriph(pin_scl, alt ? PIO_SERCOM_ALT : PIO_SERCOM);

        samd21::initClockNVIC(sercom_index);
        auto sercomData = samd21::getSercomData(sercom_index);
        auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
        auto *i2cm = &sercom->I2CM;
        resetWIRE(i2cm);
        i2cm->CTRLA.reg = SERCOM_I2CM_CTRLA_MODE(I2C_MASTER_OPERATION);
        i2cm->CTRLB.bit.SMEN =  0b1; /*| SERCOM_I2CM_CTRLB_QCEN*/
      }
      samd21::sercom_ref_count[sercom_index]++;

      return {};
    }

    cpp::result<void, error_t> release(int sercom_index)
    {
      if (samd21::sercom_ref_count[sercom_index] > 1)
      {
        samd21::sercom_ref_count[sercom_index]--;
      }
      else if (samd21::sercom_ref_count[sercom_index] == 1)
      {
        auto sercomData = samd21::getSercomData(sercom_index);
        auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
        auto *i2cm = &sercom->I2CM;
        disableWIRE(i2cm);
        samd21::sercom_ref_count[sercom_index] = 0;
      }

      return {};
    }

    cpp::result<void, error_t> restart(int sercom_index, int i2c_addr, uint32_t freq, bool read)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;
      prepareCommandBitsMasterWire(i2cm, WIRE_MASTER_ACT_REPEAT_START);
      if (!startTransmissionWIRE(i2cm, i2c_addr, read))
      {
        return cpp::fail(error_t::periph_device_err);
      }
      return {};
    }

    cpp::result<void, error_t> beginTransaction(int sercom_index, int i2c_addr, uint32_t freq, bool read)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;
      disableWIRE(i2cm);
      setClock(i2cm, freq);
      enableWIRE(i2cm);
      if (!startTransmissionWIRE(i2cm, i2c_addr, read))
      {
        return cpp::fail(error_t::periph_device_err);
      }
      return {};
    }

    cpp::result<void, error_t> endTransaction(int sercom_index)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;

      prepareCommandBitsMasterWire(i2cm, WIRE_MASTER_ACT_STOP);
      return {};
    }

    cpp::result<void, error_t> writeBytes(int sercom_index, const uint8_t *data, size_t length)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;
      for (size_t i = 0; i < length; i++)
      {
        if (!sendDataMasterWIRE(i2cm, data[i]))
        {
          return cpp::fail(error_t::invalid_arg);
        }
      }
      return {};
    }

    cpp::result<void, error_t> readBytes(int sercom_index, uint8_t *data, size_t length, bool last_nack = false)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;
      if (length == 0)
      {
        return {};
      }
      // 
      size_t l = length - 1;
      // read実行時にACKを送信
      i2cm->CTRLB.bit.ACKACT = 0b0;
      for (size_t i = 0; i < l; i++)
      {
        data[i] = readDataMasterWIRE(i2cm);
      }
      // 最後はNACKを送信
      if (last_nack) { i2cm->CTRLB.bit.ACKACT = 0b1; }
      data[l] = readDataMasterWIRE(i2cm);
      return {};
    }
